--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,4 +14,10 @@ set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/lib)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/bin)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/bin)
 
+
+include_directories(src)
+include_directories(external)
+
+
 add_subdirectory(src)
+add_subdirectory(external)
