--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,14 +5,12 @@ add_executable(${PROJECT_NAME} main.cpp)
 add_subdirectory(Singleton)
 add_subdirectory(AsyncLog)
 add_subdirectory(common)
-
-find_package(glfw3 REQUIRED)
+add_subdirectory(GL)
 
 target_link_libraries(${PROJECT_NAME}
 PRIVATE
     Singleton
     AsyncLog
     common
-    glad
-    glfw3
+    GL
 )
